with this - if any kind of bin adjustment is used within the
stat_contour (e.g., stat_contour(aes(colour=..level..), binwidth=50)
directlabels ignores the binned contour lines and labels everything
(=whatever default contour lines are produced, even if not plotted!).

See etc/area.R for an example of using fill in area plots.

2.8 --- 13-29 Aug 2012

empty.grid: only consider boxes for which the class of the closest
point is the target direct label. This avoids weird problems that can
happen on smaller plots, where sometimes labels would appear next to
another class.

qp.labels: reduce text size if there is not enough space to read all
the labels. You can still increase the xlim and ylim if you want to
labels to render at full size. This is the best fix I could think of
for the following long-standing issue:

how to automatically adjust axes to make direct labels immediately
legible? For multipanel plots you would have to adjust all the scales!

qp.labels: respect any predefined vjust for overlap calculation, by
calculating top and bottom before and using these in the QP.

qp.labels takes a new argument limits which specifies the lower limit
for the bottom of the first label and the upper limit of the top of
the last label.

API change: qp.labels takes a function order.labels instead of
tiebreak.

Bugfix: pass on ... args in dl.combine.

Bugfix: if only 1 row to call to qp.labels, then just return it.

Bugfix: calc.boxes does not use transform since that was ignoring the
cex specified.

2.7 --- 12 July 2012

New lasso.labels Positioning Method that applies the QP solver to both
the top and bottom labels.

New tiebreaker argument for qp.labels so we can do that for top.qp as
well.

2.6 --- 5 June 2012

In ggplot2 >= 0.9.1, layer$data is an empty list of class "waiver" in
the ggplot object, but geom_xxx(data=waiver) results in an error, so
we check for this now and use data=NULL when we find a waiver.

2.5 --- 6 April 2012
